30-tools/elastic-stack/kibana.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.10.1
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
          securityContext:
            capabilities:
              add: ["ALL"]
          ports:
            - containerPort: 5601
              name: http
          volumeMounts:
            - name: kibana-data
              mountPath: /usr/share/kibana/data
      volumes:
        - name: kibana-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
    - port: 80
      targetPort: 5601
      protocol: TCP
      name: http
  selector:
    app: kibana
  type: ClusterIP
