30-tools/elastic-stack/logstash-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: logstash
  namespace: logging
spec:
  ports:
    - name: beats
      port: 5045
      targetPort: 5045
  selector:
    app: logstash
