30-tools/elastic-stack/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.check-consulting.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 80
  tls:
    - hosts:
        - kibana.check-consulting.net
      secretName: kibana-tls
